<resources>
    <string name="app_name">Screens</string>

    <!-- Strings related to login -->
    <string name="prompt_studentID">Student ID</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_department">Department</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign Up</string>
    <string name="error_invalid_studentID">This student ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
