<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ozkara.kaan.screens.LoginScreen"
    android:weightSum="1"
    android:background="@drawable/bilkent_img">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_row="0"
        android:layout_column="0" />



    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:weightSum="1"
        android:padding="10dp">

        <AutoCompleteTextView
            android:id="@+id/studentID"
            android:layout_width="290dp"
            android:layout_height="41dp"
            android:gravity="center"
            android:hint="@string/prompt_studentID"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true"
            android:background="#95ffffff"
            android:layout_margin="4dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="290dp"
            android:layout_height="41dp"
            android:gravity="center"
            android:hint="@string/prompt_name"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:background="#95ffffff"
            android:layout_margin="4dp" />
        <EditText
            android:id="@+id/surname"
            android:layout_width="290dp"
            android:layout_height="41dp"
            android:gravity="center"
            android:hint="@string/prompt_surname"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:background="#95ffffff"
            android:layout_margin="4dp" />
        <EditText
            android:id="@+id/password"
            android:layout_width="290dp"
            android:layout_height="41dp"
            android:gravity="center"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:background="#95ffffff"
            android:layout_margin="4dp" />
        <EditText
            android:id="@+id/department"
            android:layout_width="290dp"
            android:layout_height="41dp"
            android:gravity="center"
            android:hint="@string/prompt_department"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:background="#95ffffff"
            android:layout_margin="4dp" />
        <Button
            android:id="@+id/sign_in_short"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>


</RelativeLayout>